--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/index.js",
-    "start":"node dotenv/config src/index.js"
+    "start":"node -r dotenv/config src/index.js"
   },
   "author": "",
   "license": "ISC",
